--- a/notes.org
+++ b/notes.org
@@ -245,8 +245,8 @@ set(MAH)
 A/B/C/D/E/H/L/S/P/MAH/MAL/J/Q/MW/jH/jL: 0 stay 1 set to ALU out
 HL/SP: 0x stay 10 set to ID out 11 set to b16
 j: 0 stay 1 set to I&0x38 (unless INT is on, then set to interrupt vector)
-MA: as HL/MA except 01 set MAH to FF and MAL to C
-IP: as HL/MA except 01 set to j
+MA: as HL/SP except 01 set MAH to FF and MAL to C
+IP: as HL/SP except 01 set to j
 ALU: 0:B 1:C 2:D 3:E 4:H 5:L 6:MR 7:A 8:J 9:Q A:I B:DAA C:F D:F E:S F:P
 ALUl: 00:A 01:I 10:H 11:L
 b16: 00:BC 01:DE 10:HL 11:SP
@@ -1855,12 +1855,12 @@ read <- 1
 at 1-3:
 MR <- DAT
 stage 3:
+DAT <- MW
+write <- wt
+ADD <- MAR
 at 3-2:
 clock CPU I
 stage 2:
-ADD <- MAR
-DAT <- MW
-write <- wt
 at 2-0:
 clock CPU O
 * DMA
